--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -7,4 +7,10 @@
         android:title="@string/action_settings"
         android:orderInCategory="100"
         app:showAsAction="never" />
+    <item android:id="@+id/export_contacts"
+        android:title="@string/export"
+        app:showAsAction="never" />
+    <item android:id="@+id/import_contacts"
+        android:title="@string/imports"
+        app:showAsAction="never" />
 </menu>
