--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -8,7 +8,7 @@
 
     <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:src="@drawable/abc_ic_search"
             />
 
@@ -20,6 +20,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="NAME"
+            android:textSize="22dp"
             android:layout_weight="1"/>
     <TextView
             android:id="@+id/tvPhone"
@@ -27,6 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvName"
             android:text="Phone"
+            android:textSize="18dp"
             android:layout_weight="1"/>
     </RelativeLayout>
 
